# mapproxy-config-gen-script

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
