[project]
name = "mapproxy-config-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"},
    {name = "Francesco Frassinelli", email = "francesco.frassinelli@nina.no"},
]
dependencies = [
    "owslib>=0.29.3",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "backoff>=2.2.1",
    "python-slugify>=8.0.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mapproxy-config-gen = "main:generate_mapproxy_config"

[tool.ruff]
fix = true
