[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "owslib>=0.29.3",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "backoff>=2.2.1",
    "python-slugify>=8.0.4",
]
requires-python = ">=3.10"
name = "mapproxy-config-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"},
    {name = "Francesco Frassinelli", email = "francesco.frassinelli@nina.no"},
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mapproxy-config-gen = "main:generate_mapproxy_config"


[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["E", "W", "I", "F", "UP",  "S", "B", "A", "COM", "LOG", "PTH", "Q"]
